# dl-eng

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
dl_eng/: config.py
dl_eng/learners/: logging.py  nano_trainer.py  trainer.py
dl_eng/models/: manual_layers.py
projects/correspondence_analysis/notebooks/: correspondence_analysis.ipynb
projects/linear_regression/notebooks/: linear_regression.ipynb
projects/pca_svd/notebooks/: pca_svd.ipynb
scripts/: __init__.py
tests/: test_config.py  test_manual_layers.py  test_nano_trainer.py
